@@ -1,3 +1,11 @@
+2000-01-24  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconftool.c (do_load_schema_file): Apply patch from Mirko,
+	properly locates the root node instead of assuming it is the only 
+	node at the toplevel (handles comments, etc).
+	(process_schema): Report error if a schema has no <locale> 
+	tags.
+
 2000-01-23  Havoc Pennington  <hp@pobox.com>
 
 	* backends/xml-entry.c (node_set_value): Store strings in a
